--- a/.github/workflows/chatbot-ci.yml
+++ b/.github/workflows/chatbot-ci.yml
@@ -1,4 +1,4 @@
-name: Chatbot CI
+name: CI for Chatbot
 
 on:
   push:
@@ -8,23 +8,23 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run Python Lint (flake8)
+    - name: Run chatbot
       run: |
-        pip install flake8
-        flake8 .
+        python main.py
